AUS-2602: Fix range slider alignment problem in Rickshaw graph

--- a/src/main/webapp/css/rickshawChart.css
+++ b/src/main/webapp/css/rickshawChart.css
@@ -77,7 +77,6 @@
 }
 
 #rickshawChart_outer #preview {
-#rickshawChart_outer #preview {
     position: relative;
     left: -10px;
 }
